--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/Yankai17148/myDialog",
   "devDependencies": {
+    "amd-optimize": "^0.6.1",
     "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
+    "gulp-requirejs": "^0.1.3",
     "gulp-uglify": "^1.4.2",
     "jquery": "^1.11.0"
   }
